Closed Bug 1966348 Opened 1 year ago Closed 11 months ago

Perma [tier 2] gfx/layers/apz/test/mochitest/test_group_overscroll_handoff.html | Test timed out. - | single tracking bug

Categories

(Core :: Panning and Zooming, defect, P5)

defect

Tracking

()

RESOLVED FIXED
141 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox138 --- unaffected
firefox139 --- unaffected
firefox140 --- fixed
firefox141 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: tnikkel)

References

(Regression)

Details

(Keywords: intermittent-failure, intermittent-testcase, regression)

Attachments

(1 file)

Filed by: chorotan [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=508144472&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/cBeXGqV4ReS3iAG199G-FQ/runs/0/artifacts/public/logs/live_backing.log


task 2025-05-14T10:16:27.014Z] 10:16:27     INFO - TEST-PASS | gfx/layers/apz/test/mochitest/test_group_overscroll_handoff.html | Starting subtest helper_position_fixed_scroll_handoff-5.html 
[task 2025-05-14T10:16:27.014Z] 10:16:27     INFO - must wait for load
[task 2025-05-14T10:16:27.014Z] 10:16:27     INFO - helper_position_fixed_scroll_handoff-5.html | start scroll #1
[task 2025-05-14T10:16:27.015Z] 10:16:27     INFO - helper_position_fixed_scroll_handoff-5.html | After scroll #1: fixed=712 subdoc window=0 window=0
[task 2025-05-14T10:16:27.015Z] 10:16:27     INFO - helper_position_fixed_scroll_handoff-5.html | wait scroll #1
[task 2025-05-14T10:16:27.015Z] 10:16:27     INFO - helper_position_fixed_scroll_handoff-5.html | start scroll #2
[task 2025-05-14T10:16:27.016Z] 10:16:27     INFO - Buffered messages finished
[task 2025-05-14T10:16:27.016Z] 10:16:27     INFO - TEST-UNEXPECTED-FAIL | gfx/layers/apz/test/mochitest/test_group_overscroll_handoff.html | Test timed out. - 
[task 2025-05-14T10:16:27.887Z] 10:16:27     INFO - GECKO(4843) | MEMORY STAT | vsize 2680MB | residentFast 175MB | heapAllocated 12MB
[task 2025-05-14T10:16:31.915Z] 10:16:31     INFO - Error: Unable to restore focus, expect failures and timeouts.
[task 2025-05-14T10:16:31.945Z] 10:16:31     INFO - TEST-OK | gfx/layers/apz/test/mochitest/test_group_overscroll_handoff.html | took 331474ms
[task 2025-05-14T10:16:32.049Z] 10:16:32     INFO - TEST-START | gfx/layers/apz/test/mochitest/test_group_paint_skip.html
[task 2025-05-14T10:16:35.563Z] 10:16:35     INFO - GECKO(4843) | helper_paint_skip_instant_absolute_scroll_position_update.html | WaitUntilApzStable: done promiseFocus
[task 2025-05-14T10:16:35.620Z] 10:16:35     INFO - GECKO(4843) | helper_paint_skip_instant_absolute_scroll_position_update.html | WaitUntilApzStable: done promiseAllPaintsDone
[task 2025-05-14T10:16:35.622Z] 10:16:35     INFO - GECKO(4843) | helper_paint_skip_instant_absolute_scroll_position_update.html | PromiseApzRepaintsFlushed: Flushed APZ repaints, waiting for callback...
[task 2025-05-14T10:16:35.657Z] 10:16:35     INFO - GECKO(4843) | helper_paint_skip_instant_absolute_scroll_position_update.html | PromiseApzRepaintsFlushed: APZ flush done
[task 2025-05-14T10:16:35.659Z] 10:16:35     INFO - GECKO(4843) | helper_paint_skip_instant_absolute_scroll_position_update.html | WaitUntilApzStable: all done
[task 2025-05-14T10:16:35.682Z] 10:16:35     INFO - GECKO(4843) | helper_paint_skip_instant_absolute_scroll_position_update.html | PromiseApzRepaintsFlushed: Flushed APZ repaints, waiting for callback...
[task 2025-05-14T10:16:35.692Z] 10:16:35     INFO - GECKO(4843) | helper_paint_skip_instant_absolute_scroll_position_update.html | PromiseApzRepaintsFlushed: APZ flush done
[task 2025-05-14T10:16:36.127Z] 10:16:36     INFO - GECKO(4843) | helper_paint_skip_instant_relative_scroll_position_update.html | WaitUntilApzStable: done promiseFocus
[task 2025-05-14T10:16:36.171Z] 10:16:36     INFO - GECKO(4843) | helper_paint_skip_instant_relative_scroll_position_update.html | WaitUntilApzStable: done promiseAllPaintsDone
[task 2025-05-14T10:16:36.182Z] 10:16:36     INFO - GECKO(4843) | helper_paint_skip_instant_relative_scroll_position_update.html | PromiseApzRepaintsFlushed: Flushed APZ repaints, waiting for callback...
[task 2025-05-14T10:16:36.393Z] 10:16:36     INFO - GECKO(4843) | helper_paint_skip_instant_relative_scroll_position_update.html | PromiseApzRepaintsFlushed: APZ flush done
[task 2025-05-14T10:16:36.393Z] 10:16:36     INFO - GECKO(4843) | helper_paint_skip_instant_relative_scroll_position_update.html | WaitUntilApzStable: all done
[task 2025-05-14T10:16:36.407Z] 10:16:36     INFO - GECKO(4843) | helper_paint_skip_instant_relative_scroll_position_update.html | PromiseApzRepaintsFlushed: Flushed APZ repaints, waiting for callback...
[task 2025-05-14T10:16:36.417Z] 10:16:36     INFO - GECKO(4843) | helper_paint_skip_instant_relative_scroll_position_update.html | PromiseApzRepaintsFlushed: APZ flush done
[task 2025-05-14T10:16:36.845Z] 10:16:36     INFO - GECKO(4843) | helper_first_paint_instant_relative_scroll_position_update.html | WaitUntilApzStable: done promiseFocus
[task 2025-05-14T10:16:36.884Z] 10:16:36     INFO - GECKO(4843) | helper_first_paint_instant_relative_scroll_position_update.html | WaitUntilApzStable: done promiseAllPaintsDone
[task 2025-05-14T10:16:36.887Z] 10:16:36     INFO - GECKO(4843) | helper_first_paint_instant_relative_scroll_position_update.html | PromiseApzRepaintsFlushed: Flushed APZ repaints, waiting for callback...
[task 2025-05-14T10:16:36.914Z] 10:16:36     INFO - GECKO(4843) | helper_first_paint_instant_relative_scroll_position_update.html | PromiseApzRepaintsFlushed: APZ flush done
[task 2025-05-14T10:16:36.915Z] 10:16:36     INFO - GECKO(4843) | helper_first_paint_instant_relative_scroll_position_update.html | WaitUntilApzStable: all done
[task 2025-05-14T10:16:36.951Z] 10:16:36     INFO - GECKO(4843) | MEMORY STAT | vsize 2685MB | residentFast 184MB | heapAllocated 16MB

(In reply to Cristina Horotan [:chorotan] from comment #1)

Started with this merge

Bug 1961722 in that range seems suspicious, given that it's changing a codepath related to scroll handoff

Okay, feel free to back out bug 1961722 then, either it'll fix the issue or not, either way we will have learned more.

Flags: needinfo?(chorotan)

I did try runs, it does seem to be because of bug 1961722.

Flags: needinfo?(chorotan)
Keywords: regression
Regressed by: 1961722

Set release status flags based on info from the regressing bug 1961722

We are failing helper_position_fixed_scroll_handoff-5.html, which has is testing scroll handoff in a scrollframe that is in a fixed div in an iframe. It is testing that scroll hands off from inside that fixed div to the root scroll frame of that document. The job type has fission disabled, which means that we do not set displayports on every scroll frame that wants them. So I would guess that when we call SetZeroMarginDisplayPortOnAsyncScrollableAncestors for the scroll frame inside the fixed div, the patch for bug 1961722 makes us walk the parent frame, so it goes to the fixed div, to the root frame and then to the parent doc. Before bug 1961722, it would walk from the fixed div to the placeholder for it, which would then eventually find the root scroll frame of the subdoc. So we probably need to make SetZeroMarginDisplayPortOnAsyncScrollableAncestors do the same kind of thing that GetAsyncScrollableAncestorFrame does when it passes the SCROLLABLE_FIXEDPOS_FINDS_ROOT flag to GetNearestScrollContainerFrame. And then audit any similar loops to see if they have a similar problem.

:tnikkel, since you are the author of the regressor, bug 1961722, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(tnikkel)
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED

Settng Fx140 to fixed since the regressor, Bug 1961722, was backed out

Flags: needinfo?(tnikkel)
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/49ffec9bf371 When walking the async scrollable ancestor chain make sure to walk from fixed position to root scroll frame. r=botond
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 141 Branch
Depends on: 1969523
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: