Bug 1966348. When walking the async scrollable ancestor chain make sure to walk from fixed position to root scroll frame. r=botond

This is what GetAsyncScrollableAncestorFrame does.

Differential Revision: https://phabricator.services.mozilla.com/D250131