layout/base/DisplayPortUtils.cpp
@@ -816,11 +816,21 @@ bool DisplayPortUtils::MaybeCreateDisplayPort(
   }
   return false;
 }
+
+nsIFrame* DisplayPortUtils::OneStepInAsyncScrollableAncestorChain(
+    nsIFrame* aFrame) {
+  if (aFrame->StyleDisplay()->mPosition == StylePositionProperty::Fixed &&
+      nsLayoutUtils::IsReallyFixedPos(aFrame)) {
+    return aFrame->PresShell()->GetRootScrollContainerFrame();
+  }
+  return nsLayoutUtils::GetCrossDocParentFrameInProcess(aFrame);
+}
+
 void DisplayPortUtils::SetZeroMarginDisplayPortOnAsyncScrollableAncestors(
     nsIFrame* aFrame) {
   nsIFrame* frame = aFrame;
   while (frame) {
-    frame = nsLayoutUtils::GetCrossDocParentFrameInProcess(frame);
+    frame = OneStepInAsyncScrollableAncestorChain(frame);
     if (!frame) {
       break;
     }
@@ -901,7 +911,7 @@ void DisplayPortUtils::ExpireDisplayPortOnAsyncScrollableAncestor(
     nsIFrame* aFrame) {
   nsIFrame* frame = aFrame;
   while (frame) {
-    frame = nsLayoutUtils::GetCrossDocParentFrameInProcess(frame);
+    frame = OneStepInAsyncScrollableAncestorChain(frame);
     if (!frame) {
       break;
     }
